<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <item type="id" name="appBar" />
    <item type="id" name="toolbar" />
    <item type="id" name="activityIndicator" />
    <item type="id" name="activityOverlay" />
    <item type="id" name="listEmpty" />

    <!-- Main Home -->
    <item type="id" name="mainHomeScreen" />
    <item type="id" name="mainHomeNavigation" />
    <item type="id" name="mainHomeNavigationContainer" />

    <item type="id" name="mainHomeNavigationSignature" />
    <item type="id" name="mainHomeNavigationCrypto" />
    <item type="id" name="mainHomeNavigationEID" />

    <item type="id" name="mainHomeToolbarLogo" />
    <item type="id" name="mainHomeToolbarOverflow" />

    <item type="id" name="mainHomeMenu" />
    <item type="id" name="mainHomeMenuCloseButton" />
    <item type="id" name="mainHomeMenuHelp" />
    <item type="id" name="mainHomeMenuRecent" />
    <item type="id" name="mainHomeMenuSettings" />
    <item type="id" name="mainHomeMenuAbout" />

    <!-- Main Help -->
    <item type="id" name="mainHelpScreen" />

    <!-- Main Settings -->
    <item type="id" name="mainSettingsScreen" />
    <item type="id" name="mainSettingsFragment" />

    <!-- Main About -->
    <item type="id" name="mainAboutScreen" />
    <item type="id" name="mainAboutRiaDigiDocVersionTitle" />
    <item type="id" name="mainAboutPreferenceV7FixVersionTitle" />
    <item type="id" name="mainAboutGuavaVersionTitle" />
    <item type="id" name="mainAboutCommonsIoVersionTitle" />
    <item type="id" name="mainAboutOkioVersionTitle" />
    <item type="id" name="mainAboutTimberVersionTitle" />
    <item type="id" name="mainAboutButterknifeVersionTitle" />
    <item type="id" name="mainAboutOkHttpVersionTitle" />
    <item type="id" name="mainAboutRetrofitVersionTitle" />
    <item type="id" name="mainAboutSpongyCastleVersionTitle" />
    <item type="id" name="mainAboutMaterialValuesVersionTitle" />
    <item type="id" name="mainAboutDaggerVersionTitle" />
    <item type="id" name="mainAboutConductorVersionTitle" />
    <item type="id" name="mainAboutRxJavaVersionTitle" />
    <item type="id" name="mainAboutRxAndroidVersionTitle" />
    <item type="id" name="mainAboutRxBindingVersionTitle" />
    <item type="id" name="mainAboutAutoValueVersionTitle" />
    <item type="id" name="mainAboutAutoValueParcelVersionTitle" />
    <item type="id" name="mainAboutThreeTenAbpVersionTitle" />
    <item type="id" name="mainAboutExpandableLayoutVersionTitle" />
    <item type="id" name="mainAboutJunitVersionTitle" />
    <item type="id" name="mainAboutTruthVersionTitle" />

    <!-- Signature Home -->
    <item type="id" name="signatureHomeScreen" />
    <item type="id" name="signatureHomeCreateButton" />

    <!-- Signature List -->
    <item type="id" name="signatureListScreen" />
    <item type="id" name="signatureList" />
    <item type="id" name="signatureListItemName" />
    <item type="id" name="signatureListItemRemoveButton" />

    <!-- Signature Create -->
    <item type="id" name="signatureCreateScreen" />
    <item type="id" name="signatureCreateProgress" />

    <!-- Signature Update -->
    <item type="id" name="signatureUpdateScreen" />
    <item type="id" name="signatureUpdateList" />
    <item type="id" name="signatureUpdateListSuccessMessage" />
    <item type="id" name="signatureUpdateListWarningMessage" />
    <item type="id" name="signatureUpdateListName" />
    <item type="id" name="signatureUpdateListSubheadTitle" />
    <item type="id" name="signatureUpdateListSubheadButton" />
    <item type="id" name="signatureUpdateListDocumentIcon" />
    <item type="id" name="signatureUpdateListDocumentName" />
    <item type="id" name="signatureUpdateListDocumentSize" />
    <item type="id" name="signatureUpdateListDocumentRemoveButton" />
    <item type="id" name="signatureUpdateListSignatureType" />
    <item type="id" name="signatureUpdateListSignatureName" />
    <item type="id" name="signatureUpdateListSignatureCreatedAt" />
    <item type="id" name="signatureUpdateListSignatureRemoveButton" />
    <item type="id" name="signatureUpdateListDocumentsAddButton" />
    <item type="id" name="signatureUpdateMobileIdContainer" />
    <item type="id" name="signatureUpdateMobileIdStatus" />
    <item type="id" name="signatureUpdateMobileIdChallenge" />
    <item type="id" name="signatureUpdateSendButton" />
    <item type="id" name="signatureUpdateButtonSpace" />
    <item type="id" name="signatureUpdateSignatureAddButton" />
    <item type="id" name="signatureUpdateSignatureAdd" />
    <item type="id" name="signatureUpdateSignatureAddMethod" />
    <item type="id" name="signatureUpdateSignatureAddMethodMobileId" />
    <item type="id" name="signatureUpdateSignatureAddMethodIdCard" />

    <item type="id" name="signatureUpdateMobileId" />
    <item type="id" name="signatureUpdateMobileIdPhoneNoLabel" />
    <item type="id" name="signatureUpdateMobileIdPhoneNo" />
    <item type="id" name="signatureUpdateMobileIdPersonalCodeLabel" />
    <item type="id" name="signatureUpdateMobileIdPersonalCode" />
    <item type="id" name="signatureUpdateMobileIdRememberMe" />

    <item type="id" name="signatureUpdateIdCard" />
    <item type="id" name="signatureUpdateIdCardProgressContainer" />
    <item type="id" name="signatureUpdateIdCardProgressMessage" />
    <item type="id" name="signatureUpdateIdCardSignContainer" />
    <item type="id" name="signatureUpdateIdCardSignData" />
    <item type="id" name="signatureUpdateIdCardSignPin2" />
    <item type="id" name="signatureUpdateIdCardSignPin2Error" />

    <!-- Signature Add -->
    <item type="id" name="signatureAdd" />
    <item type="id" name="signatureAddPhoneNoLabel" />
    <item type="id" name="signatureAddPhoneNo" />
    <item type="id" name="signatureAddPersonalCodeLabel" />
    <item type="id" name="signatureAddPersonalCode" />
    <item type="id" name="signatureAddRememberMe" />

    <!-- Crypto Home -->
    <item type="id" name="cryptoHomeScreen" />
    <item type="id" name="cryptoHomeCreateButton" />

    <!-- EID Home -->
    <item type="id" name="eidHomeScreen" />
    <item type="id" name="eidHomeScreenScroll" />
    <item type="id" name="eidHomeProgressMessage" />
    <item type="id" name="eidHomeData" />
    <item type="id" name="eidHomeDataType" />
    <item type="id" name="eidHomeDataGivenNames" />
    <item type="id" name="eidHomeDataSurname" />
    <item type="id" name="eidHomeDataPersonalCode" />
    <item type="id" name="eidHomeDataCitizenship" />
    <item type="id" name="eidHomeDataDocumentNumberLabel" />
    <item type="id" name="eidHomeDataDocumentNumber" />
    <item type="id" name="eidHomeDataExpiryDateLabel" />
    <item type="id" name="eidHomeDataExpiryDate" />
    <item type="id" name="eidHomeDataCertificatesTitle" />
    <item type="id" name="eidHomeDataCertificatesContainer" />
    <item type="id" name="eidHomeDataCertificatesAuth" />
    <item type="id" name="eidHomeDataCertificatesSign" />
    <item type="id" name="eidHomeDataCertificatesPukTitle" />
    <item type="id" name="eidHomeDataCertificatesPukText" />
    <item type="id" name="eidHomeDataCertificatesPukButton" />
    <item type="id" name="eidHomeDataCertificatesPukError" />
    <item type="id" name="eidHomeDataCertificatesPukLink" />

    <item type="id" name="eidHomeCertificateDataTitle" />
    <item type="id" name="eidHomeCertificateDataValidity" />
    <item type="id" name="eidHomeCertificateDataButton" />
    <item type="id" name="eidHomeCertificateDataLink" />
    <item type="id" name="eidHomeCertificateDataError" />

</resources>
